--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "mssql": "^11.0.1",
     "express-rate-limit": "^6.8.0"
   },
+  "jest-junit": {
+    "outputDirectory": "test-results",
+    "outputName": "test-results.xml"
+  },
   "devDependencies": {
     "nodemon": "^3.1.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "supertest": "^6.3.4"
   },
   "engines": {
