feat: Dockerfile and pipeline and .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=yourname
-DB_PASSWORD=yourpassword
-DB_SERVER=servername.database.windows.net
-DB_NAME=dbname
+DB_USER="moayad"
+DB_PASSWORD="1234567890M*"
+DB_SERVER=devops2-moayad-db-server.database.windows.net
+DB_NAME=devops2-moayad-db
 PORT=3000
