feat: backend .env & k8s files

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_USER="moayad"
+DB_USER=group5
 DB_PASSWORD="1234567890M*"
-DB_SERVER=devops2-group5-db-server.database.windows.net
+DB_SERVER=devops2-group5-sql-server.database.windows.net
 DB_NAME=devops2-group5-db
+
 PORT=3000
