added the updated Azure pipeline for backend

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -1,7 +1,7 @@
 trigger:
   branches:
     include:
-      - test-branch
+      - main
 
 variables:
   dockerRegistryServiceConnection: 'dockerhub_connection'
