--- a/sonarqube/pvc.yaml
+++ b/sonarqube/pvc.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sonarqube-pvcc
-  namespace: sonarqube
+  name: sonarqube-data-pvc # A descriptive name for your PVC
+  namespace: sonarqube    # The same namespace as your SonarQube deployment
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteOnce # Or ReadWriteMany depending on your needs and storage class
+  storageClassName: default # Or your preferred StorageClass
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi # Adjust the size based on your needs
