feat: sonarqube pipeline

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -13,6 +13,7 @@ variables:
   k8sNamespace: 'auth-app'
   sonarQubeServiceConnection: 'SonarQube-Service'
   sonarProjectKey: 'project3-group5'
+  nodeVersion: "20.x"
 
 stages:
 
