--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -14,7 +14,7 @@ variables:
   sonarQubeServiceConnection: 'SonarQube-Service'
   sonarProjectKey: 'project3-group5'
   nodeVersion: "20.x"
-  appName: 'auth-app-backend' 
+  appName: 'project3-group5' 
 
 stages:
 
